--- a/.gitmodules
+++ b/.gitmodules
@@ -45,7 +45,7 @@
 	branch = prod
 [submodule "firmware/libfirmware"]
 	path = firmware/libfirmware
-	url = https://github.com/rusefi/libfirmware.git
+	url = https://github.com/awpe/libfirmware.git
 [submodule "java_console/peak-can-basic"]
 	path = java_console/peak-can-basic
 	url = https://github.com/rusefi/peak-can-basic
